refactored to fix open file descriptor